# various-smart-contracts

./: .gitignore  LICENSE  README.md
aleo (snarkVM)/: ABOUT.md
aleo (snarkVM)/counter/: README.md  program.json
aleo (snarkVM)/counter/src/: main.leo
aleo (snarkVM)/kayleo_token/: README.md  program.json
aleo (snarkVM)/kayleo_token/src/: main.leo
aleo (snarkVM)/proxy_contract/: README.md  program.json
aleo (snarkVM)/proxy_contract/imports/: state.leo
aleo (snarkVM)/proxy_contract/src/: main.leo
aptos (MoveVM)/: ABOUT.md
aptos (MoveVM)/kay_coin/: ABOUT.md
aptos (MoveVM)/kay_coin/source/: KayCoin.move
ethereum (EVM)/: ABOUT.md
ethereum (EVM)/fund_me/: FundMe.sol
ethereum (EVM)/keyval_store/: ABOUT.md
ethereum (EVM)/store_factory/: StoreFactory.sol
ethereum/ERC20/: ABOUT.md  KayToken.sol
ethereum/fund_me/: ABOUT.md  FundMe.sol
ethereum/hello_world/: ABOUT.md  HelloWrold.sol
ethereum/keyval_store/: KeyValueStore.sol
ethereum/store_factory/: ABOUT.md  StoreFactory.sol
near (WASM)/counter/: package-lock.json
near (WASM)/counter/src/: contract.ts
solana/: ABOUT.md
solana (sealevel)/increment_program/: ABOUT.md
solana (sealevel)/increment_program/src/: lib.rs
solana/increment_program/: ABOUT.md  Cargo.toml
ton (TVM)/: ABOUT.md
ton (TVM)/HelloWorldTact/: ABOUT.md  package-lock.json  package.json
ton (TVM)/HelloWorldTact/contracts/: first_contract.tact
ton (TVM)/Keton/: ABOUT.md  package-lock.json  package.json
ton (TVM)/Keton/contracts/: ketton.tact  (+2 more)
ton (TVM)/counter/: counter.fc
ton (TVM)/counter_FunC/: ABOUT.md
(+5 files in other folders)
